Fixing overflow-x

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
   line-height: 1.5rem;
   height: 100%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @media (prefers-reduced-motion) {
@@ -28,6 +29,7 @@ body {
   min-height: 100%;
   max-width: 100%;
   overflow-x: hidden;
+  position: relative;
 }
 
 img {
@@ -434,6 +436,15 @@ img {
 }
 
 @media (min-width: 920px) {
+
+  html,
+  body {
+    overflow-x: scroll;
+  }
+
+  body {
+    position: initial;
+  }
 
   .mobile-menu {
     display: none;
